--- a/treasure-hunt/src/App.scss
+++ b/treasure-hunt/src/App.scss
@@ -11,12 +11,28 @@ body{
 
 // LOGIN COMPONENT
 .loginWrapper{
-
+  .loginTitleContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top:10%;
+    
+    h4{
+      color:white;
+      font-size: 1.2rem;
+      margin:0;
+    }
+    h1{
+      color:white;
+      font-size: 4rem;
+      margin:0;
+    }
+  }
   form{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top:15%;
+    margin-top:10%;
 
     .inputContainer{
       display: flex;
@@ -32,6 +48,7 @@ body{
         width:12rem;
         border-radius: 10px;
         font-size: 1rem;
+        padding-left:.5rem;
       }
     }
   }
@@ -45,7 +62,7 @@ body{
       height:2rem;
       border-radius:10px;
       font-size: .9rem;
-  
+      cursor: pointer;
     }
   }
   canvas{
