--- a/treasure-hunt/src/App.scss
+++ b/treasure-hunt/src/App.scss
@@ -98,11 +98,23 @@ body{
   background-color: green;
   width: 40px;
   height: 50px;
+  font-size: 16px;
+  cursor: pointer;
+
+  &:hover{
+    background-color: lightgreen;
+  }
 }
 
 .regularButton {
   background-color: gray;
   width: 40px;
   height: 50px;
+  font-size: 16px;
+  cursor: pointer;
+
+  &:hover{
+    background-color: black;
+  }
 }
 
