--- a/treasure-hunt/src/App.scss
+++ b/treasure-hunt/src/App.scss
@@ -92,29 +92,34 @@ body{
   height:100vh;
   border: 1px solid black;
   width:28%;
-}
-
-.availableButton {
-  background-color: green;
-  width: 40px;
-  height: 50px;
-  font-size: 16px;
-  cursor: pointer;
-
-  &:hover{
-    background-color: lightgreen;
+  
+  .directionButtons{
+    display: flex;
+    justify-content: space-evenly;
+    margin: 0 1rem;
+    .button{
+      width: 100%;
+      height: 50px;
+      font-size: 1.8rem;
+      font-weight: bolder;
+      cursor: pointer;
+      &:focus {
+        outline:0;
+      }
+      &:hover{
+        background-color: white;
+      }
+    }
+    
+    .availableButton {
+      background-color: rgb(255,71,71);
+    }
+    
+    .regularButton {
+      background-color: gray;
+    }
   }
+  
 }
 
-.regularButton {
-  background-color: gray;
-  width: 40px;
-  height: 50px;
-  font-size: 16px;
-  cursor: pointer;
-
-  &:hover{
-    background-color: black;
-  }
-}
 
