--- a/treasure-hunt/src/App.scss
+++ b/treasure-hunt/src/App.scss
@@ -7,15 +7,22 @@ body{
 .app{
   display: flex;
   flex-direction: row;
+  width:100vw;
+  height:100vh;
 }
 
 // LOGIN COMPONENT
 .loginWrapper{
+  display: flex;
+  flex-direction: column;
+  margin:auto;
+  margin-top:10%;
   .loginTitleContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top:10%;
+    
+    
     
     h4{
       color:white;
@@ -79,24 +86,25 @@ body{
   
   canvas{
     border: 1px solid black; 
+    position: fixed;
+    top:0;
+    right:0;
+    z-index: -1;
   }
 }
 
 // MAPINFO 
 
 .mapInfoWrapper{
- 
-  position: fixed;
-  top:0;
-  right:1%;
+  width:25vw;
   height:100vh;
-  border: 1px solid black;
-  width:28%;
+  margin-left:1rem;
+  // border: 1px solid black;
   
   .directionButtons{
     display: flex;
-    justify-content: space-evenly;
-    margin: 0 1rem;
+    justify-content: space-between;
+    
     .button{
       width: 100%;
       height: 50px;
